Mooma/bin/moomaParser.py
# Generated from src/mooma.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class moomaParser ( Parser ):

    grammarFileName = "mooma.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'->'", "'|'", "')'", "'('", "'{'", "'}'", 
                     "';'", "':='", "','" ]

    symbolicNames = [ "<INVALID>", "Flecha", "Separator", "Par_derecho", 
                      "Par_izquierdo", "Llave_izquierda", "Llave_derecha", 
                      "Punto_y_coma", "Asignacion", "Coma", "Auto", "In", 
                      "Out", "Trans", "Ini", "Sta", "Def", "Env", "Ident", 
                      "Evento", "Codigo", "Comentario", "WS" ]

    RULE_program = 0
    RULE_environment = 1
    RULE_l_output = 2
    RULE_output = 3
    RULE_l_define = 4
    RULE_define = 5
    RULE_entrada = 6
    RULE_salida = 7
    RULE_l_evento = 8
    RULE_l_evento_fact = 9
    RULE_l_ident = 10
    RULE_l_ident_fact = 11
    RULE_l_automaton = 12
    RULE_automaton = 13
    RULE_states = 14
    RULE_l_states = 15
    RULE_l_states_fact = 16
    RULE_initial = 17
    RULE_transitions = 18
    RULE_l_transitions = 19

    ruleNames =  [ "program", "environment", "l_output", "output", "l_define", 
                   "define", "entrada", "salida", "l_evento", "l_evento_fact", 
                   "l_ident", "l_ident_fact", "l_automaton", "automaton", 
                   "states", "l_states", "l_states_fact", "initial", "transitions", 
                   "l_transitions" ]

    EOF = Token.EOF
    Flecha=1
    Separator=2
    Par_derecho=3
    Par_izquierdo=4
    Llave_izquierda=5
    Llave_derecha=6
    Punto_y_coma=7
    Asignacion=8
    Coma=9
    Auto=10
    In=11
    Out=12
    Trans=13
    Ini=14
    Sta=15
    Def=16
    Env=17
    Ident=18
    Evento=19
    Codigo=20
    Comentario=21
    WS=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def environment(self):
            return self.getTypedRuleContext(moomaParser.EnvironmentContext,0)


        def l_output(self):
            return self.getTypedRuleContext(moomaParser.L_outputContext,0)


        def l_define(self):
            return self.getTypedRuleContext(moomaParser.L_defineContext,0)


        def l_automaton(self):
            return self.getTypedRuleContext(moomaParser.L_automatonContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = moomaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.environment()
            self.state = 41
            self.l_output()
            self.state = 42
            self.l_define()
            self.state = 43
            self.l_automaton()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnvironmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Env(self):
            return self.getToken(moomaParser.Env, 0)

        def Asignacion(self):
            return self.getToken(moomaParser.Asignacion, 0)

        def Ident(self):
            return self.getToken(moomaParser.Ident, 0)

        def Punto_y_coma(self):
            return self.getToken(moomaParser.Punto_y_coma, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_environment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironment" ):
                listener.enterEnvironment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironment" ):
                listener.exitEnvironment(self)




    def environment(self):

        localctx = moomaParser.EnvironmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_environment)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Env]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(moomaParser.Env)
                self.state = 46
                self.match(moomaParser.Asignacion)
                self.state = 47
                self.match(moomaParser.Ident)
                self.state = 48
                self.match(moomaParser.Punto_y_coma)
                pass
            elif token in [moomaParser.EOF, moomaParser.Auto, moomaParser.Def, moomaParser.Ident]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_outputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def output(self):
            return self.getTypedRuleContext(moomaParser.OutputContext,0)


        def l_output(self):
            return self.getTypedRuleContext(moomaParser.L_outputContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_output" ):
                listener.enterL_output(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_output" ):
                listener.exitL_output(self)




    def l_output(self):

        localctx = moomaParser.L_outputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_l_output)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Ident]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.output()
                self.state = 53
                self.l_output()
                pass
            elif token in [moomaParser.EOF, moomaParser.Auto, moomaParser.Def]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(moomaParser.Ident, 0)

        def Asignacion(self):
            return self.getToken(moomaParser.Asignacion, 0)

        def Codigo(self):
            return self.getToken(moomaParser.Codigo, 0)

        def Punto_y_coma(self):
            return self.getToken(moomaParser.Punto_y_coma, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)




    def output(self):

        localctx = moomaParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_output)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(moomaParser.Ident)
            self.state = 59
            self.match(moomaParser.Asignacion)
            self.state = 60
            self.match(moomaParser.Codigo)
            self.state = 61
            self.match(moomaParser.Punto_y_coma)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_defineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define(self):
            return self.getTypedRuleContext(moomaParser.DefineContext,0)


        def l_define(self):
            return self.getTypedRuleContext(moomaParser.L_defineContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_define" ):
                listener.enterL_define(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_define" ):
                listener.exitL_define(self)




    def l_define(self):

        localctx = moomaParser.L_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_l_define)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Def]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.define()
                self.state = 64
                self.l_define()
                pass
            elif token in [moomaParser.EOF, moomaParser.Auto]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Def(self):
            return self.getToken(moomaParser.Def, 0)

        def Ident(self):
            return self.getToken(moomaParser.Ident, 0)

        def Llave_izquierda(self):
            return self.getToken(moomaParser.Llave_izquierda, 0)

        def entrada(self):
            return self.getTypedRuleContext(moomaParser.EntradaContext,0)


        def salida(self):
            return self.getTypedRuleContext(moomaParser.SalidaContext,0)


        def Llave_derecha(self):
            return self.getToken(moomaParser.Llave_derecha, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_define

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine" ):
                listener.enterDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine" ):
                listener.exitDefine(self)




    def define(self):

        localctx = moomaParser.DefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_define)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(moomaParser.Def)
            self.state = 70
            self.match(moomaParser.Ident)
            self.state = 71
            self.match(moomaParser.Llave_izquierda)
            self.state = 72
            self.entrada()
            self.state = 73
            self.salida()
            self.state = 74
            self.match(moomaParser.Llave_derecha)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntradaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def In(self):
            return self.getToken(moomaParser.In, 0)

        def Asignacion(self):
            return self.getToken(moomaParser.Asignacion, 0)

        def l_evento(self):
            return self.getTypedRuleContext(moomaParser.L_eventoContext,0)


        def Punto_y_coma(self):
            return self.getToken(moomaParser.Punto_y_coma, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)




    def entrada(self):

        localctx = moomaParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_entrada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(moomaParser.In)
            self.state = 77
            self.match(moomaParser.Asignacion)
            self.state = 78
            self.l_evento()
            self.state = 79
            self.match(moomaParser.Punto_y_coma)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SalidaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Out(self):
            return self.getToken(moomaParser.Out, 0)

        def Asignacion(self):
            return self.getToken(moomaParser.Asignacion, 0)

        def l_ident(self):
            return self.getTypedRuleContext(moomaParser.L_identContext,0)


        def Punto_y_coma(self):
            return self.getToken(moomaParser.Punto_y_coma, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_salida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSalida" ):
                listener.enterSalida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSalida" ):
                listener.exitSalida(self)




    def salida(self):

        localctx = moomaParser.SalidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_salida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(moomaParser.Out)
            self.state = 82
            self.match(moomaParser.Asignacion)
            self.state = 83
            self.l_ident()
            self.state = 84
            self.match(moomaParser.Punto_y_coma)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_eventoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Evento(self):
            return self.getToken(moomaParser.Evento, 0)

        def l_evento_fact(self):
            return self.getTypedRuleContext(moomaParser.L_evento_factContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_evento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_evento" ):
                listener.enterL_evento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_evento" ):
                listener.exitL_evento(self)




    def l_evento(self):

        localctx = moomaParser.L_eventoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_l_evento)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(moomaParser.Evento)
            self.state = 87
            self.l_evento_fact()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_evento_factContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Coma(self):
            return self.getToken(moomaParser.Coma, 0)

        def l_evento(self):
            return self.getTypedRuleContext(moomaParser.L_eventoContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_evento_fact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_evento_fact" ):
                listener.enterL_evento_fact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_evento_fact" ):
                listener.exitL_evento_fact(self)




    def l_evento_fact(self):

        localctx = moomaParser.L_evento_factContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_l_evento_fact)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Coma]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(moomaParser.Coma)
                self.state = 90
                self.l_evento()
                pass
            elif token in [moomaParser.Flecha, moomaParser.Punto_y_coma]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_identContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(moomaParser.Ident, 0)

        def l_ident_fact(self):
            return self.getTypedRuleContext(moomaParser.L_ident_factContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_ident" ):
                listener.enterL_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_ident" ):
                listener.exitL_ident(self)




    def l_ident(self):

        localctx = moomaParser.L_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_l_ident)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(moomaParser.Ident)
            self.state = 95
            self.l_ident_fact()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_ident_factContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Coma(self):
            return self.getToken(moomaParser.Coma, 0)

        def l_ident(self):
            return self.getTypedRuleContext(moomaParser.L_identContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_ident_fact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_ident_fact" ):
                listener.enterL_ident_fact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_ident_fact" ):
                listener.exitL_ident_fact(self)




    def l_ident_fact(self):

        localctx = moomaParser.L_ident_factContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_l_ident_fact)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Coma]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(moomaParser.Coma)
                self.state = 98
                self.l_ident()
                pass
            elif token in [moomaParser.Punto_y_coma]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_automatonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def automaton(self):
            return self.getTypedRuleContext(moomaParser.AutomatonContext,0)


        def l_automaton(self):
            return self.getTypedRuleContext(moomaParser.L_automatonContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_automaton

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_automaton" ):
                listener.enterL_automaton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_automaton" ):
                listener.exitL_automaton(self)




    def l_automaton(self):

        localctx = moomaParser.L_automatonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_l_automaton)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Auto]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.automaton()
                self.state = 103
                self.l_automaton()
                pass
            elif token in [moomaParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AutomatonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Auto(self):
            return self.getToken(moomaParser.Auto, 0)

        def Ident(self, i:int=None):
            if i is None:
                return self.getTokens(moomaParser.Ident)
            else:
                return self.getToken(moomaParser.Ident, i)

        def Par_izquierdo(self):
            return self.getToken(moomaParser.Par_izquierdo, 0)

        def Par_derecho(self):
            return self.getToken(moomaParser.Par_derecho, 0)

        def Llave_izquierda(self):
            return self.getToken(moomaParser.Llave_izquierda, 0)

        def states(self):
            return self.getTypedRuleContext(moomaParser.StatesContext,0)


        def initial(self):
            return self.getTypedRuleContext(moomaParser.InitialContext,0)


        def transitions(self):
            return self.getTypedRuleContext(moomaParser.TransitionsContext,0)


        def Llave_derecha(self):
            return self.getToken(moomaParser.Llave_derecha, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_automaton

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutomaton" ):
                listener.enterAutomaton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutomaton" ):
                listener.exitAutomaton(self)




    def automaton(self):

        localctx = moomaParser.AutomatonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_automaton)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(moomaParser.Auto)
            self.state = 109
            self.match(moomaParser.Ident)
            self.state = 110
            self.match(moomaParser.Par_izquierdo)
            self.state = 111
            self.match(moomaParser.Ident)
            self.state = 112
            self.match(moomaParser.Par_derecho)
            self.state = 113
            self.match(moomaParser.Llave_izquierda)
            self.state = 114
            self.states()
            self.state = 115
            self.initial()
            self.state = 116
            self.transitions()
            self.state = 117
            self.match(moomaParser.Llave_derecha)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Sta(self):
            return self.getToken(moomaParser.Sta, 0)

        def Asignacion(self):
            return self.getToken(moomaParser.Asignacion, 0)

        def l_states(self):
            return self.getTypedRuleContext(moomaParser.L_statesContext,0)


        def Punto_y_coma(self):
            return self.getToken(moomaParser.Punto_y_coma, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_states

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStates" ):
                listener.enterStates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStates" ):
                listener.exitStates(self)




    def states(self):

        localctx = moomaParser.StatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_states)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(moomaParser.Sta)
            self.state = 120
            self.match(moomaParser.Asignacion)
            self.state = 121
            self.l_states()
            self.state = 122
            self.match(moomaParser.Punto_y_coma)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_statesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self, i:int=None):
            if i is None:
                return self.getTokens(moomaParser.Ident)
            else:
                return self.getToken(moomaParser.Ident, i)

        def Separator(self):
            return self.getToken(moomaParser.Separator, 0)

        def l_states_fact(self):
            return self.getTypedRuleContext(moomaParser.L_states_factContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_states

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_states" ):
                listener.enterL_states(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_states" ):
                listener.exitL_states(self)




    def l_states(self):

        localctx = moomaParser.L_statesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_l_states)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(moomaParser.Ident)
            self.state = 125
            self.match(moomaParser.Separator)
            self.state = 126
            self.match(moomaParser.Ident)
            self.state = 127
            self.l_states_fact()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_states_factContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Coma(self):
            return self.getToken(moomaParser.Coma, 0)

        def l_states(self):
            return self.getTypedRuleContext(moomaParser.L_statesContext,0)


        def getRuleIndex(self):
            return moomaParser.RULE_l_states_fact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_states_fact" ):
                listener.enterL_states_fact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_states_fact" ):
                listener.exitL_states_fact(self)




    def l_states_fact(self):

        localctx = moomaParser.L_states_factContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_l_states_fact)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [moomaParser.Coma]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(moomaParser.Coma)
                self.state = 130
                self.l_states()
                pass
            elif token in [moomaParser.Punto_y_coma]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ini(self):
            return self.getToken(moomaParser.Ini, 0)

        def Asignacion(self):
            return self.getToken(moomaParser.Asignacion, 0)

        def Ident(self):
            return self.getToken(moomaParser.Ident, 0)

        def Punto_y_coma(self):
            return self.getToken(moomaParser.Punto_y_coma, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_initial

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitial" ):
                listener.enterInitial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitial" ):
                listener.exitInitial(self)




    def initial(self):

        localctx = moomaParser.InitialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_initial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(moomaParser.Ini)
            self.state = 135
            self.match(moomaParser.Asignacion)
            self.state = 136
            self.match(moomaParser.Ident)
            self.state = 137
            self.match(moomaParser.Punto_y_coma)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TransitionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Trans(self):
            return self.getToken(moomaParser.Trans, 0)

        def Llave_izquierda(self):
            return self.getToken(moomaParser.Llave_izquierda, 0)

        def l_transitions(self):
            return self.getTypedRuleContext(moomaParser.L_transitionsContext,0)


        def Llave_derecha(self):
            return self.getToken(moomaParser.Llave_derecha, 0)

        def getRuleIndex(self):
            return moomaParser.RULE_transitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransitions" ):
                listener.enterTransitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransitions" ):
                listener.exitTransitions(self)




    def transitions(self):
